# open_skill_Marketplace

./: .gitignore  CHANGELOG.md  CLAUDE.md  EDIT_FEATURE_IMPLEMENTATION.md  README.md  build-desktop.ps1  dev-desktop.ps1  esbuild.js  index.html  package-lock.json  package.json  package_extension.ps1  tsconfig.json
.agent/workflows/: add-agent.md  add-skill-sources.md  git-push-code.md
.cargo/: config.toml
.claude/: settings.local.json
docs/: skill_integration_plan.md  skill_marketplace_dev_plan.md
docs/plans/: 2026-03-13-marketplace-p0-fixes.md  2026-03-13-tauri-rust-migration.md
resources/: marketplace.css  marketplace.html  marketplace.js  seed-skills.json  skill-sources.json
src/: App.tsx  extension.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  marketplace.rs
src/app/: bootstrap.ts  types.ts
src/components/layout/: AppSidebar.tsx  InspectContextMenu.tsx  StatusBar.tsx
src/desktop/: api.ts  types.ts
src/features/: inspect.ts
src/models/: Agent.ts  ClaudeSkill.ts  Skill.ts  SkillMetadata.ts
src/platform/: desktop.ts  store.ts
src/providers/: MarketplaceProvider.ts
src/services/: AgentManager.ts  GithubSkillSource.ts  SkillInstaller.ts  TranslationService.ts
src/services/agents/: DefaultAgents.ts
src/test/: extension.test.ts
